[package]
name = "xdrtop"
version = "1.0.2"
edition = "2021"
authors = ["XDRTop Team"]
description = "High-performance Rust CLI monitoring tool for Cortex XDR with real-time incident tracking"
license = "MIT"
repository = "https://github.com/yourusername/xdrtop"
homepage = "https://github.com/yourusername/xdrtop"
keywords = ["security", "monitoring", "cortex", "xdr", "cli"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.deb]
maintainer = "XDRTop Team <support@xdrtop.dev>"
copyright = "2024, XDRTop Team"
license-file = ["LICENSE", "4"]
extended-description = """\
XDRTop is a high-performance terminal-based monitoring tool for Cortex XDR \
that provides real-time incident tracking with advanced visualization and \
user-friendly interactions. Features include interactive filtering, \
MITRE ATT&CK framework integration, and comprehensive case management."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/xdrtop", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/xdrtop/", "644"],
]

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
