[package]
name = "xdrtop"
version = "2.0.4"
edition = "2021"
authors = ["XDRTop Team"]
description = "High-performance Rust CLI monitoring tool for Cortex XDR with real-time case tracking"
license = "MIT"
repository = "https://github.com/gocortexio/xdrtop"
homepage = "https://github.com/gocortexio/xdrtop"
keywords = ["security", "monitoring", "cortex", "xdr", "cli"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.deb]
maintainer = "XDRTop Team <support@xdrtop.dev>"
copyright = "2025, XDRTop Team"
license-file = ["LICENSE", "4"]
extended-description = """\
XDRTop is a high-performance terminal-based monitoring tool for Cortex XDR \
that provides real-time case tracking with advanced visualisation and \
user-friendly interactions. Features include interactive filtering, \
MITRE ATT&CK framework integration, and comprehensive case management."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/xdrtop", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/xdrtop/", "644"],
]

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
